--- a/softsusy_pars/todo
+++ b/softsusy_pars/todo
@@ -1,3 +1,7 @@
+#General
+
+* start writing a makefile
+
 #SLHA
 
 * decide on base representation and move away from the abomination that is Rtypes.h: less ROOT dependency the better!
