update not on fixed widths

--- a/todo
+++ b/todo
@@ -5,3 +5,4 @@
 # SLHA
 
 * decide on base representation and move away from the abomination that is Rtypes.h: less ROOT dependency the better!
+* could use --std=c++11 so we can use int8_t etc.
