--- a/todo
+++ b/todo
@@ -6,3 +6,7 @@
 
 * decide on base representation and move away from the abomination that is Rtypes.h: less ROOT dependency the better!
 * could use --std=c++11 so we can use int8_t etc.
+
+# FeynHiggs
+
+* needs to take a new SLHA file object (in run_feynhiggs) and append the relevant lines to it (ideally we do this in python , but not sure how we get the information out)
