--- a/todo
+++ b/todo
@@ -10,3 +10,6 @@
 # FeynHiggs
 
 * needs to take a new SLHA file object (in run_feynhiggs) and append the relevant lines to it (ideally we do this in python , but not sure how we get the information out)
+
+# Crash / Hang problem (32bit related?)
+* No idea what's causing this - FeynHiggs reads the file as a stream fine.
